<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/balances_root_layout_height"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_text_view_height_default"
        android:text="@string/my_balance_title"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/balances_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/balanceEurValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="0.00"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_min"
                android:autoSizeTextType="uniform"
                android:text="@string/eur"
                android:textAllCaps="true"
                android:textSize="@dimen/balance_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/balanceUsdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="0.00"
                android:textSize="@dimen/balance_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_min"
                android:autoSizeTextType="uniform"
                android:text="@string/usd"
                android:textAllCaps="true"
                android:textSize="@dimen/balance_text_size"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/balanceBgnValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="0.00"
                android:textSize="@dimen/balance_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_min"
                android:autoSizeTextType="uniform"
                android:text="@string/bgn"
                android:textAllCaps="true"
                android:textSize="@dimen/balance_text_size"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>